--- a/YoutubeApiBackend/package.json
+++ b/YoutubeApiBackend/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.8.4",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "node": "^23.11.0",
     "nodemon": "^3.1.9"
