--- a/YoutubeApiBackend/package.json
+++ b/YoutubeApiBackend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
     "@aws-sdk/credential-provider-env": "^3.775.0",
+    "@aws-sdk/lib-storage": "^3.796.0",
     "@aws-sdk/node-http-handler": "^3.374.0",
     "@aws-sdk/s3-request-presigner": "^3.787.0",
     "aws-sdk": "^2.1692.0",
