--- a/YoutubeApiBackend/package.json
+++ b/YoutubeApiBackend/package.json
@@ -3,11 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
-     "dev":   "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "pm2-start": "pm2 start server.js --name youtubeapibackend"
   },
   "keywords": [],
   "author": "",
@@ -18,28 +17,29 @@
     "@aws-sdk/lib-storage": "^3.796.0",
     "@aws-sdk/node-http-handler": "^3.374.0",
     "@aws-sdk/s3-request-presigner": "^3.787.0",
+    "@googleapis/youtube": "^25.1.0",
     "aws-sdk": "^2.1692.0",
-   "axios": "^1.9.0",
-    "cors": "^2.8.5",
+    "axios": "^1.9.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
+    "express-rate-limit": "^7.5.0",
+    "googleapis": "^149.0.0",
+    "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "node": "^23.11.0",
+    "node-cache": "^5.1.2",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "pm2": "^6.0.5",
     "uuid": "^11.1.0",
-    "node-cache": "^5.1.2"
+    "youtube-transcript": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
-
-
-
-
