--- a/YoutubeApiBackend/utils/proxy.conf
+++ b/YoutubeApiBackend/utils/proxy.conf
@@ -1,55 +1,46 @@
-# //   /etc/nginx/conf.d/proxy.conf
-
+# // /etc/nginx/conf.d/api.youtube.petersomond.com.conf
 # server {
-#     listen       80;
-#     server_name  api.youtube.petersomond.com;
+#     listen 80;
+#     server_name api.youtube.petersomond.com;
 
-#     #────────────────────────────────────────────────────────────────────────
-#     # 1) Handle CORS preflight (OPTIONS) at nginx level
-#     #────────────────────────────────────────────────────────────────────────
-#     if ($request_method = OPTIONS) {
-#         add_header Access-Control-Allow-Origin  "https://www.youtube.petersomond.com" always;
-#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-#         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cache-Control, X-Requested-With, Accept, Origin" always;
-#         add_header Access-Control-Allow-Credentials "true" always;
-#         add_header Access-Control-Max-Age 86400 always;
-#         return 204;
-#     }
-
-#     #────────────────────────────────────────────────────────────────────────
-#     # 2) ALB health‐check endpoint (no CORS needed for /api/health, but
-#     #    nod to consistency)
-#     #────────────────────────────────────────────────────────────────────────
+#     # Health check (ALB will hit this on port 80)
 #     location /api/health {
 #         proxy_pass          http://127.0.0.1:3000/api/health;
 #         proxy_http_version  1.1;
 #         proxy_set_header    Upgrade $http_upgrade;
 #         proxy_set_header    Connection "upgrade";
 #         proxy_set_header    Host         $host;
+#         proxy_set_header    X-Real-IP    $remote_addr;
+#         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header    X-Forwarded-Proto $scheme;
 #         proxy_cache_bypass  $http_upgrade;
-
-#         # Echo CORS headers even on /api/health
-#         add_header Access-Control-Allow-Origin  "https://www.youtube.petersomond.com" always;
-#         add_header Access-Control-Allow-Credentials "true" always;
-#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-#         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cache-Control, X-Requested-With, Accept, Origin" always;
 #     }
 
-#     #────────────────────────────────────────────────────────────────────────
-#     # 3) Proxy ALL other /api traffic to Node on port 3000
-#     #────────────────────────────────────────────────────────────────────────
+#     # All other traffic → Node on 127.0.0.1:3000
 #     location / {
+#         # Handle preflight requests
+#         if ($request_method = 'OPTIONS') {
+#             add_header 'Access-Control-Allow-Origin' '$http_origin' always;
+#             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+#             add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization, Cache-Control, X-Requested-With, Accept, Origin' always;
+#             add_header 'Access-Control-Allow-Credentials' 'true' always;
+#             add_header 'Access-Control-Max-Age' '86400' always;
+#             return 204;
+#         }
+
 #         proxy_pass          http://127.0.0.1:3000;
 #         proxy_http_version  1.1;
 #         proxy_set_header    Upgrade $http_upgrade;
 #         proxy_set_header    Connection "upgrade";
 #         proxy_set_header    Host         $host;
+#         proxy_set_header    X-Real-IP    $remote_addr;
+#         proxy_set_header    X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header    X-Forwarded-Proto $scheme;
 #         proxy_cache_bypass  $http_upgrade;
 
-#         # Always add CORS headers to the proxied response
-#         add_header Access-Control-Allow-Origin  "https://www.youtube.petersomond.com" always;
-#         add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-#         add_header Access-Control-Allow-Headers "Content-Type, Authorization, Cache-Control, X-Requested-With, Accept, Origin" always;
-#         add_header Access-Control-Allow-Credentials "true" always;
+#         # Increase buffer sizes for large uploads
+#         proxy_buffering off;
+#         proxy_request_buffering off;
+#         client_max_body_size 500m;
 #     }
 # }
